More comments for Python scripts

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -182,19 +182,23 @@
    },
    "outputs": [],
    "source": [
-    "#Count keywords in database\n",
+    "#Generate keyword list and count keywords in database\n",
     "import json\n",
     "keywordList = []\n",
     "with open(\"/home/werner/Desktop/JSONdbKeys.json\") as data_file:    \n",
     "    data = json.load(data_file)\n",
+    "    #Determine range to avoid out of bounds error\n",
     "    for i in range(len(data[\"PMCOAI_rs_articles\"])):\n",
     "        if len(data[\"PMCOAI_rs_articles\"][i][\"keywords\"]) > 0:\n",
     "            for keywords in data[\"PMCOAI_rs_articles\"][i][\"keywords\"]:\n",
     "                keywords = keywords.strip()\n",
+    "                #Include alphanumeric terms and phrases\n",
     "                if len(keywords) > 0 and all(x.isalnum() or x.isspace() for x in keywords) \\\n",
     "                and not keywords.startswith(\"rs\"):\n",
     "                    keywordList.append(keywords)\n",
+    "    #Remove duplicates with set\n",
     "    keywordList = set(keywordList)\n",
+    "    #Revert to list\n",
     "    keywordList = sorted(keywordList)\n",
     "with open(\"/home/werner/Desktop/keywords.js\", \"w\") as data_file:\n",
     "    data_file.write(json.dumps(keywordList))\n",
@@ -209,15 +213,19 @@
    },
    "outputs": [],
    "source": [
-    "#Count rs numbers in database\n",
+    "#Generate rs number list and count rs numbers in database\n",
     "import json\n",
     "keywordList = []\n",
     "with open(\"/home/werner/Desktop/JSONdbKeys.json\") as data_file:    \n",
     "    data = json.load(data_file)\n",
+    "    #Determine range to avoid out of bounds error\n",
     "    for i in range(len(data[\"PMCOAI_rs_articles\"])):\n",
+    "        #Include rs numbers with at least four digits following \"rs\"\n",
     "        if len(data[\"PMCOAI_rs_articles\"][i][\"rs_number\"]) > 5 and data[\"PMCOAI_rs_articles\"][i][\"rs_number\"][2:].isdigit():\n",
     "            keywordList.append(data[\"PMCOAI_rs_articles\"][i][\"rs_number\"])\n",
+    "    #Remove duplicates with set\n",
     "    keywordList = set(keywordList)\n",
+    "    #Revert to list\n",
     "    keywordList = sorted(keywordList)\n",
     "with open(\"/home/werner/Desktop/rsnumbers.js\", \"w\") as data_file: \n",
     "    data_file.write(json.dumps(keywordList))\n",
@@ -239,8 +247,9 @@
     "h = httplib2.Http()\n",
     "resp, content = h.request(\"http://sniphunter.sanbi.ac.za/PMCOAI_rs_articles?rs_number=rs5743810\")\n",
     "assert resp.status == 200\n",
-    "#convert binary object to JSON object\n",
-    "result = content.decode(\"utf-8\") \n",
+    "#Convert binary object to string\n",
+    "result = content.decode(\"utf-8\")\n",
+    "#Convert string to JSONstring\n",
     "inJSON = json.loads(result)\n",
     "for dictionary in inJSON:\n",
     "    for key, value in dictionary.items():\n",
