Comments for JSON-server wrapper

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -79,7 +79,6 @@
     "        for node in tree.iter('pub-date'):\n",
     "            for subnode in node.iter('year'):\n",
     "                collection = node.attrib\n",
-    "                #if \"collection\" in collection.values():\n",
     "                if \"pub-type\" in collection.keys():\n",
     "                    year = subnode.text\n",
     "        #Get titles\n",
@@ -122,7 +121,7 @@
     "                            #create list item without white spaces\n",
     "                            rslist.append(rsnumber.strip() + \"\\t\" + email.strip() + \"\\t\" + year.strip() + \\\n",
     "                            \"\\t\" + pmid.strip() + \"\\t\" + doi.strip() + \"\\t\" + file.strip() + \"\\t\" + str(kwdstring) + \"\\t\" + str(title))\n",
-    "#create rsSNP occurence counter (with dictionary) to avoid data duplication\n",
+    "#create refSNP occurence counter (with dictionary) to avoid data duplication\n",
     "rsdict = {}\n",
     "for item in rslist:\n",
     "    #add data if counter is zero\n",
